--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 /* Auth */
 
+.App {
+  background: #f5f7fa;
+}
+
 .form {
   margin: 60px auto;
-  width: 50%;
+  max-width: 600px;
+  width: 100%;
   position: relative;
-  background: rgb(198, 215, 228);
-  border-radius: 24px;
+  background: var(--white);
+  border-radius: 20px;
   padding: 30px;
 }
 
@@ -31,6 +36,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.text_first {
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--black);
 }
 
 .text_gray {
@@ -76,7 +87,6 @@
   padding: 0 20px;
   border-radius: 8px;
   background: var(--main);
-  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.1);
   color: var(--white);
   font-size: 16px;
   font-weight: 500;
@@ -122,4 +132,29 @@
   font-size: 15px;
   font-weight: 500;
   color: var(--main);
+}
+
+.loading_div {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (max-width: 600px) {
+  .form {
+    margin: 60px auto;
+    max-width: 600px;
+    width: 100%;
+    position: relative;
+    background: var(--white);
+    border-radius: 12px;
+    padding: 20px 16px;
+  }
+
+  .text_center,
+  .text_first {
+    font-size: 22px;
+  }
 }
