--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -49,6 +49,13 @@
   border-radius: 20px;
 }
 
+.dashboard .centering {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (max-width: 600px) {
   .dashboard {
     width: 100%;
